<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.usp.each.saeg</groupId>
	<artifactId>asm-defuse</artifactId>
	<version>0.0.10-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>asm-defuse</name>
	<url>https://github.com/saeg/asm-defuse</url>
	<description>asm powered by definitions/uses analysis</description>
	<inceptionYear>2013</inceptionYear>

	<organization>
		<name>University of Sao Paulo</name>
	</organization>

	<licenses>
		<license>
			<name>The BSD 3-Clause License</name>
			<url>http://opensource.org/licenses/BSD-3-Clause</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/saeg/asm-defuse</url>
		<connection>scm:git:https://github.com/saeg/asm-defuse.git</connection>
		<developerConnection>scm:git:git@github.com:saeg/asm-defuse.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/saeg/asm-defuse/issues</url>
	</issueManagement>

	<ciManagement>
		<system>GitHub Actions</system>
		<url>https://github.com/saeg/asm-defuse/actions</url>
	</ciManagement>

	<developers>
		<developer>
			<email>roberto.andrioli@gmail.com</email>
			<name>Roberto Araujo</name>
			<url>https://github.com/andrioli</url>
			<id>andrioli</id>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>6</maven.compiler.source>
		<maven.compiler.target>6</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<configuration>
					<includes>
						<include>**/*.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.11</version>
				<configuration>
					<header>LICENSE-TEMPLATE.txt</header>
					<properties>
						<owner>Roberto Araujo</owner>
						<email>roberto.andrioli@gmail.com</email>
					</properties>
					<excludes>
						<exclude>pom.xml</exclude>
						<exclude>.github/**</exclude>
						<exclude>mvnw</exclude>
						<exclude>mvnw.cmd</exclude>
						<exclude>.mvn/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<!-- no class must be missed -->
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>CLASS</counter>
											<value>MISSEDCOUNT</value>
											<maximum>0</maximum>
										</limit>
									</limits>
								</rule>
								<rule>
									<!-- instruction and branch coverage minimum of 80% for every class -->
									<element>CLASS</element>
									<limits>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>1.2.5</version>
				<executions>
					<execution>
						<id>pitest</id>
						<phase>test</phase>
						<goals>
							<goal>mutationCoverage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>true</skip>
					<threads>2</threads>
					<timestampedReports>false</timestampedReports>
					<mutationThreshold>70</mutationThreshold>
					<coverageThreshold>80</coverageThreshold>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- http://openjdk.java.net/jeps/182 -->
		<profile>
			<id>jdk12</id>
			<activation>
				<jdk>[12,20)</jdk>
			</activation>
			<properties>
				<maven.compiler.source>7</maven.compiler.source>
				<maven.compiler.target>7</maven.compiler.target>
			</properties>
		</profile>
		<profile>
			<id>jdk20</id>
			<activation>
				<jdk>[20,)</jdk>
			</activation>
			<properties>
				<maven.compiler.source>8</maven.compiler.source>
				<maven.compiler.target>8</maven.compiler.target>
			</properties>
		</profile>
		<profile>
			<id>jdk16</id>
			<activation>
				<jdk>[16,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<configuration>
							<jvmArgs>
								<jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens=java.base/java.text=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</jvmArg>
								<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
							</jvmArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>pitest</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<configuration>
							<skip>false</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<dependencies>
							<dependency>
								<groupId>commons-lang</groupId>
								<artifactId>commons-lang</artifactId>
								<version>2.6</version>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-analysis</artifactId>
			<version>9.5</version>
		</dependency>
		<dependency>
			<groupId>br.usp.each.saeg</groupId>
			<artifactId>saeg-commons</artifactId>
			<version>0.0.5</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
